Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87216

Clang compiler warnings on qtbase

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • None
    • 6.0.0 Alpha
    • Build System
    • None
    • macOS

    Description

      The flag 
      -Wrange-loop-analysis (which seems to be on by default in clang) makes clang throw  a handful of warnings about loop variables passed by value even if they're declared as references.

      Environment info:
      MacOS 10.15.6

      Apple clang version 12.0.0 (clang-1200.0.32.2)
      Target: x86_64-apple-darwin19.6.0

      Commands:

      configure -developer-build -opensource -nomake examples -nomake tests -confirm-license -cmake
      ninja
      Solving this may yield increased performance as well.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            david.skoland David Skoland
            david.skoland David Skoland
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes